# eda

./: .gitignore  .gitmodules  01.algorithms.html  01.introduction.html  02.iterative-algorithms.html  02.iterative-recursive-algorithms.html  02.recursive-algorithms.html  03.sorting-algorithms.html  04.computational-complexity.html  05.abstract-data-types.html  05.pointers.html  06.abstract-data-types.html  06.pointers.html  07.lists-class.html  07.lists-free-functions.html  07.lists.html  08.stacks.html  09.queues.html  10.binary-tree.html  10.trees.html  11.binary-search-tree.html  11.binary_trees.html  12.avl-tree.html  12.heaps.html  13.binary_search_trees.html  13.heaps.html  14.graphs.html  14.self-balancing_binary_search_tree.html  15.graphs.html  16.graphs-labeled.html  17.graphs-prim.html  18.graphs-kruskal.html  19.graphs-dijkstra.html  20.graphs-A-star.html  2021.soluciones.html  21.esquemas-algoritmicos.html  README.md  about.html  about_me.html  eda2.0.sobrecarga.html  (+7 more)
.github/workflows/: 2021.practica1.yml  2021.practica2.yml  actividad00.yml  actividad01.yml  actividad02.yml  actividad03.yml  actividad04.yml  actividad08.yml  actividades.yml  gh-pages.yml  labels.yml  practicas.yml  tests.yml
actividad00/: CMakeLists.txt  README.md  conanfile.txt
actividad00/src/: message_dream.cpp  message_dream.h
actividad00/tests/: test_message_dream.cpp
actividad01/: CMakeLists.txt  README.md
actividad01/actividad00/src/: palindrome.cpp
actividad01/actividad00/tests/: test_palindrome.cpp
actividad01/src/: palindrome.cpp  palindrome.h
actividad02/: CMakeLists.txt  README.md
actividad02/src/: binary_search.cpp  binary_search.h
actividad02/tests/: test_binary_search.cpp
actividad03/: CMakeLists.txt  README.md
actividad03/src/: Bubble_Sort_DGM.cpp  bubble_sort.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp  sort_algorithms.h
actividad03/tests/: test_bubble_sort.cpp  test_merge_sort.cpp  test_quick_sort.cpp  test_selection_sort.cpp
actividad04/: CMakeLists.txt  README.md
actividad04/src/: DoubleLinkedList.cpp  DoubleLinkedList.h  ElementoListaDoble.cpp  ElementoListaDoble.h  TipoDato.h
actividad04/tests/: test_iterate_reverse.cpp
actividad08/: CMakeLists.txt  README.md
actividad08/src/: ElementoListaSimple.cpp  ElementoListaSimple.h  Stack.cpp  Stack.h  TipoDato.cpp  TipoDato.h  check_braces.cpp  check_braces.h
actividad08/tests/: test_check_braces.cpp
actividad10/: CMakeLists.txt  lanes.cpp  single_lane.cpp
actividad10/src/: Client.h  ElementoListaSimple.h  Lane.cpp  Lane.h
actividad11/: CMakeLists.txt  main.cpp
actividad11/src/: ElementoArbol.h  Queue.cpp  Queue.h  TipoDato.h  Tree.cpp  Tree.h
actividad14/: CMakeLists.txt  main.cpp
actividad14/src/: Avion.cpp  Avion.h  PriorityQueue.cpp  PriorityQueue.h
apps/opencv/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
apps/telegram/wordnet/: CMakeLists.txt  conanfile.py
apps/twitter-post/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
css/: about_me.css  custom.css  text-animation.css
examenes/: 2021.parcial.md  2021.simulacro.md
js/: text-animation.js
plugins/: external_slide.js  reveal-compiler-explorer.js
plugins/chalkboard/: plugin.js
plugins/embed-tweet/: plugin.js
practicas/: 2021.practica1.md  2021.practica2.md  2021.practica3.md  2021.practica4.md  2021.practica5.md
practicas/2021.practica1/: CMakeLists.txt
practicas/2021.practica2/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp
practicas/2021.practica2/src/: ElementListaDoble.cpp  ElementoListaDoble.cpp  ElementoListaDoble.h  NameCounter.cpp  NameCounter.h  Persona.cpp  Persona.h  Police.cpp  Police.h  Queue.cpp  Queue.h  Wardrobe.cpp  Wardrobe.h
practicas/2021.practica2/tests/: test_elementolistadoble.cpp  test_namecounter.cpp  test_persona.cpp  test_police.cpp  test_queue.cpp  test_wardrobe.cpp
practicas/2021.practica3/: CMakeLists.txt  employees.cpp  math1.cpp  math2.cpp
practicas/2021.practica3/math/: BinaryTree.cpp  BinaryTree.h
practicas/2021.practica3/src/: Database.cpp  Database.h  Empleado.cpp  Empleado.h  FilterDatabase.cpp  FilterDatabase.h
practicas/2021.practica4/: CMakeLists.txt  jobs.txt  main.cpp
practicas/2021.practica5/: CMakeLists.txt  Ciudades.txt  Distancias++.txt  Distancias.txt  main1.cpp
slides/: 00.abstract.html  00.hello.html  01.algorithms.html  01.introduction.html  02.iterative-algorithms.html  02.iterative-recursive-algorithms.html  02.recursive-algorithms.html  03.sorting-algorithms.html  04.computational-complexity.html  05.pointers.html  06.abstract-data-types.html  07.lists-class.html  07.lists-free-functions.html  07.lists.html  08.stacks.html  09.queues.html  2021.soluciones.html  about_me.html  code.html  code_emoji.html  hello_world.html  no_free_lunch_theorem.html
slides/algorithm-schemes/: 01.voraces.html  02.divide-y-venceras.html  03.backtracking.html  04.otros.html  _index.html
slides/algoritmos/: ej-binary-search-r1.dot  ej-binary-search-r2.dot  ej-binary-search-r3.dot  ej-binary-search-r4.dot  ej-binary-search-r5.dot  ej-binary-search-r6.dot  ej-binary-search.html  ej-inception.html  ej-palindrome.html  ejemplo-for-loop.dot  intro.html  iterative-intro.html  recursive-intro.html  sort-bubble.dot  sort-bubble.html  sort-insertion.html  sort-mergesort-base.dot  sort-mergesort-merge.dot  sort-mergesort.html  sort-order-inestable.dot  sort-order-stable.dot  sort-quicksort-base.dot  sort-quicksort-general.dot  sort-quicksort.html  sort-selection.dot  sort-selection.html
slides/eda2.0/: sobrecarga-exercise.html  sobrecarga-list.html  sobrecarga-sort.html  sobrecarga-tree.html  sobrecarga.html  templates.html
slides/graph_labeled/: 01.labeled-graph.html  02.prim.html  03.kruskal.html  04.dijkstra.html  05.A-star.html  _index.html
sources/bst/: CMakeLists.txt  main.cpp
sources/bst/src/: BinarySearchTree.cpp  BinarySearchTree.h
templates/: template.html.tpl
trabajos/: Algoritmos_ordenación.md  Arbol_genealogico.md  Problema_caballo.md  Red_metro.md  Supermercado.md  Torres_Hanoi.md  tweets.md
(+178 files in other folders)
